# RedCrucible

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tools.yml
redcrucible/: config.py  exceptions.py  main.py
redcrucible/api/: router.py
redcrucible/api/routes/: artifacts.py  build.py  health.py  tools.py
redcrucible/models/: __init__.py  build.py  enums.py  tool.py
redcrucible/pipeline/: __init__.py  context.py  engine.py  registry.py  stage.py
redcrucible/stages/: __init__.py  _example.py  dnlib_patcher.py  donut.py  obfuscar.py  polymorphic_loader.py
redcrucible/stages/_polymorph/: __init__.py  block_reorder.py  dead_code.py  decryption_stub.py  encryption.py  engine.py  instruction_subs.py  register_allocator.py  syscall_stub.py
redcrucible/storage/: __init__.py  artifact_store.py
redcrucible/tools/: __init__.py  manifest.py  registry.py
tests/: conftest.py  test_build_api.py  test_container_api.py  test_dnlib_patcher.py  test_donut_stage.py  test_health.py  test_obfuscar_stage.py  test_pipeline.py  test_polymorphic_loader.py
tools/AssemblyPatcher/: AssemblyPatcher.csproj  Program.cs
tools/AssemblyPatcher/Patchers/: GuidRandomizer.cs  ILMutator.cs
tools/AssemblyPatcher/publish/: AssemblyPatcher  AssemblyPatcher.deps.json
tools/obfuscar/: DotnetToolSettings.xml  GlobalTools.deps.json
verify/: scan.py
